# MP-SPDZ

./: CMakeLists.txt  CONFIG
Networking/: Player.cpp
tests/: CMakeLists.txt  testPlayer.cpp
